syntax = "proto3"; //describes the version of proto being used
option java_multiple_files=true;
option java_package="billing";

service BillingService{
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);

}
//Kind of DTO
message BillingRequest{
  string patientId=1;
  string name=2;
  string email=3; //these numbers must be unique
}

message BillingResponse{
    string accountId=1;
    string status=2;
    }